Fix background getting cut off when scrolling

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,8 @@ body {
 
 .backgroundContainer {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     background-image: url('assets/circuits-logo-bg.png');
     background-size: 10%;
     background-repeat: repeat;
